# gala

./: .bzrignore  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  HACKING  INSTALL  Makefile.am  Makefile.common  README.md  autogen.sh  config.vala.in  configure.ac  meson.build  meson_options.txt
background/: Application.vala  Background.vala  BackgroundManager.vala  BackgroundWindow.vala  Utils.vala  meson.build
blur-protocol/: meson.build  pantheon-blur-v1.xml  pantheon-blur.vapi
daemon/: BackgroundMenu.vala  DBus.vala  DisplayConfig.vala  EndSessionDialog.vala  Main.vala  Main.vala~  MenuDaemon.vala  MonitorLabel.vala  SessionManager.vala  Window.vala  WindowMenu.vala  io.elementary.gala.daemon.desktop  main.vala  meson.build  org.pantheon.gala.daemon.desktop
daemon-gtk3/: BackgroundMenu.vala  DBus.vala  Main.vala  MonitorLabel.vala  WindowMenu.vala  meson.build
daemon/IBus/: Candidate.vala  CandidateArea.vala  CandidateBox.vala  IBusCandidateWindow.vala  IBusService.vala
daemon/OSK/: InputManager.vala  Keyboard.vala  ModelManager.vala  OSKManager.vala  OSKService.vala  OSKWindow.vala
daemon/Session/: EndSessionDialog.vala  Manager.vala
daemon/WindowSwitcher/: WindowSwitcher.vala  WindowSwitcherIcon.vala
data/: 20_elementary.pantheon.wm.gschema.override  Makefile.am  gala-daemon.css  gala-daemon.desktop  gala-multitaskingview.desktop.in  gala-other.desktop.in  gala-wayland.desktop  gala-x11.service.in  gala-x11.target  gala.appdata.xml.in  gala.css  gala.desktop  gala.gresource.xml  gala.gschema.xml  gala.metainfo.xml.in  gala.target  gala@wayland.service.in  gala@x11.service.in  io.elementary.desktop.wm.shell  meson.build  org.pantheon.desktop.gala.gschema.xml  org.pantheon.desktop.gala.gschema.xml.in  org.pantheon.desktop.gala.gschema.xml.in.in
data/shaders/: box-blur.frag  colorblindness-correction.frag  colorblindness-correction.vert  monochrome.vert  rounded-corners.frag  rounded-corners.vert  rounder-corners.vert  tv-effect.frag
docs/: Makefile.am  meson.build
lib/: AbstractSwitcher.vala  ActivatableComponent.vala  AnimationsSettings.vala  App.vala  AppCache.vala  AppSystem.vala  BackgroundBlurEffect.vala  BackgroundContainerInterface.vala  BackgroundManager.vala  BackgroundManagerInterface.vala  CanvasActor.vala  CloseButton.vala  CommonEnums.vala  Constants.vala  DragDropAction.vala  FocusController.vala  Focusable.vala  Icon.vala  Image.vala  Makefile.am  Plugin.vala  PropertyAnimator.vala  RoundedCornersEffect.vala  SessionSettings.vala  ShadowEffect.vala  SimpleShaderEffect.vala  Text.vala  Utils.vala  WindowIcon.vala  WindowManager.vala  gala.deps  gala.deps.in  gala.pc.in  meson.build
lib/AppSystem/: AppCache.vala
lib/Drawing/: BufferSurface.vala  Canvas.vala  CanvasActor.vala  Color.vala  ColorManager.vala  RoundedCornerEffect.vala  StyleManager.vala  Utilities.vala
lib/Effects/: BoxBlurEffect.vala  BoxBlurManager.vala
lib/Focusable/: FocusController.vala  FocusUtils.vala  Focusable.vala
lib/Gestures/: ActorTarget.vala  Gesture.vala  GestureBackend.vala  GestureController.vala  GestureSettings.vala  GestureTarget.vala  GestureTrigger.vala  GlobalTrigger.vala  PanBackend.vala  PropertyTarget.vala  RootTarget.vala  ScrollBackend.vala  SpringTimeline.vala  SwipeTrigger.vala  ToucheggBackend.vala  TouchpadBackend.vala  TouchscreenTarget.vala  WorkspaceHideTracker.vala
lib/Widget/: FocusController.vala  FocusUtils.vala  Root.vala  Widget.vala
lib/Widgets/: AbstractSwitcher.vala  Box.vala  FocusUtils.vala  Icon.vala  Image.vala  Text.vala  Widget.vala  WindowIcon.vala
plugins/app-windows/: AppWindowOverview.vala  Main.vala  meson.build
plugins/notify/: ConfirmationNotification.vala  Main.vala  Makefile.am  NormalNotification.vala  Notification.vala  NotificationStack.vala  NotifyServer.vala  NotifySettings.vala  PluginServer.vala  meson.build  notify.gresource.xml  pixbuf-dbus-util.c
plugins/pip/: Main.vala  Makefile.am  MoveAction.vala  PopupWindow.vala  SelectionArea.vala  ShadowEffect.vala  meson.build
plugins/template/: CMakeLists.txt  Main.vala  Makefile.am  README  meson.build
plugins/touchegg/: Client.vala  (+3 more)
protocol/: meson.build  pantheon-desktop-shell-v1.xml  pantheon-desktop-shell.vapi
src/: Actions.vala  AliveChecker.vala  AreaTiling.vala  BackgroundBlurEffect.vala  BackgroundCache.vala  BlurActor.vala  BlurEffect.vala  BlurManager.vala  BrightnessManager.vala  ColorblindCorrectionEffect.vala  ColorblindFiltersManager.vala  ColorblindnessEffects.vala  ColorblindnessManager.vala  Config.vala.cmake  DBus.vala  DBusAccelerator.vala  DaemonManager.vala  Demo.vala  DesktopIntegration.vala  Dialogs.vala  DockThemeManager.vala  DragDropAction.vala  EndSessionDialog.vala  Expo.vala  FakeWindow.vala  GalaAccountsServicePlugin.vala  GestureAnimationDirector.vala  HidableWindow.vala  IBusManager.vala  InputMethod.vala  InternalUtils.vala  KeyboardManager.vala  Main.vala  Main.vala~  Makefile.am  ManagedClient.vala  MediaFeedback.vala  MixedDpiManager.vala  NotificationStack.vala  NotificationsManager.vala  (+48 more)
tests/: Main.vala  MockWindowManager.vala  MutterTestCase.vala  TestCase.vala  meson.build
vapi/: Clutter-10.metadata  Clutter-11.metadata  Clutter-12.metadata  Clutter-13-custom.vala  Clutter-13.metadata  Clutter-14-custom.vala  Clutter-14.metadata  Clutter-15-custom.vala  Clutter-15.metadata  Clutter-16.metadata  Clutter-17.metadata  Clutter-18.metadata  Clutter-2.metadata  Clutter-3.metadata  Clutter-5.metadata  Clutter-6-custom.vala  Clutter-6.metadata  Clutter-7.metadata  Clutter-8.metadata  Clutter-9-custom.vala  Clutter-9.metadata  Cogl-10.metadata  Cogl-11.metadata  Cogl-13-custom.vala  Cogl-13.metadata  Cogl-14-custom.vala  Cogl-14.metadata  Cogl-15-custom.vala  Cogl-15.metadata  Cogl-16.metadata  Cogl-18-custom.vala  Cogl-18.metadata  Cogl-2-custom.vala  Cogl-2.metadata  Cogl-3-custom.vala  Cogl-5-custom.vala  Cogl-5.metadata  Cogl-6-custom.vala  Cogl-6.metadata  Cogl-7.metadata  (+156 more)
windowSwitcher/: Application.vala  ShellKeyGrabber.vala  WindowSwitcher.vala  WindowSwitcherIcon.vala  meson.build
(+463 files in other folders)
